--- a/_posts/2022-03-27-[密码学]对称加密 AES算法.md
+++ b/_posts/2022-03-27-[密码学]对称加密 AES算法.md
@@ -56,21 +56,39 @@ Rijndael算法的版本中，偏移量和AES有少许不同；对于长度256比
 
 每一列的四个字节透过线性变换互相结合。每一列的四个元素分别当作 1 , x , x^2 , x^3 的系数，合并即为 GF(2^8) 中的一个多项式，接着将此多项式和一个固定的多项式 c(x)=3x^3+x^2+x+2 在模 x^4+1 下相乘。此步骤亦可视为 `Rijndael 有限域`之下的矩阵乘法。MixColumns 函数接受4个字节的输入，输出4个字节，每一个输入的字节都会对输出的四个字节造成影响。因此 ShiftRows 和 MixColumns 两步骤为这个密码系统提供了扩散性。
 
+## AES支持的模式
 
-## java jdk 实现
+- ECB模式（The Electronic Codebook Mode）
+- CBC模式（The Cipher Block Chaining Mode）
+- CTR模式（The Counter Mode）
+- GCM模式（The Galois/Counter Mode）
+- CFB模式（The Cipher Feedback Mode）
+- OFB模式（The Output Feedback Mode）
+
+![图片](/png/cryptography/aes_mod.png)
+
+1. 根据加密方式的不同，简单分为块加密模式与流加密模式: 块加密模式最为常见同时在工程化中使用最为普遍的是CBC模式, 流加密模式最具代表性的是GCM模式;
+2. ECB 和 CBC 需要强制对齐, 不支持 NoPadding
+3. 只有 ECB 模式不需要 iv ,其他模式均需要添加 iv
+4. GCM 模式在java语言的官方库并没有提供, 需要使用bc库
+5. ECB模式是不安全的，不建议在工程实践中使用
+
+## java
+
+1.  jdk 实现
 
 ```java
 package crypto.aes;
 
-import org.apache.commons.codec.binary.Base64;
-
 import javax.crypto.Cipher;
 import javax.crypto.KeyGenerator;
 import javax.crypto.SecretKey;
+import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
 import java.security.Key;
 import java.security.NoSuchAlgorithmException;
-import java.security.NoSuchProviderException;
+import java.security.SecureRandom;
+import java.util.Arrays;
 
 /**
  * 对称加密 AES算法 jdk实现
@@ -79,22 +97,17 @@ public class AesUtils {
 
     private static final String ALGORITHM = "AES";
 
+    private static final byte[] DEFAULT_IV = new byte[16];
+
     public enum MODE {
-        ECB,
-        CBC,
-        PCBC,
-        CTR,
-        CFB,
-        OFB
+        ECB, CBC, PCBC, CTR, CFB, OFB, GCM
     }
 
     public enum PADDING {
-        NoPadding,
-        PKCS5Padding,
-        ISO10126Padding
+        NoPadding, PKCS5Padding, PKCS7Padding, ISO10126Padding
     }
 
-    public static byte[] initKey() throws NoSuchAlgorithmException, NoSuchProviderException {
+    public static byte[] initKey() throws Exception {
         return initKey(128);
     }
 
@@ -103,19 +116,23 @@ public class AesUtils {
      * @return 密钥
      * @throws NoSuchAlgorithmException
      */
-    public static byte[] initKey(int keySIze) throws NoSuchAlgorithmException, NoSuchProviderException {
+    public static byte[] initKey(int keySIze) throws Exception {
+        if (keySIze != 128 && keySIze != 192 && keySIze != 256) {
+            throw new RuntimeException("invalid key size, valid size is 128 or 192 or 256");
+        }
         KeyGenerator keyGenerator = KeyGenerator.getInstance(ALGORITHM);
-        keyGenerator.init(keySIze);// 密钥长度
+        SecureRandom secureRandom = new SecureRandom();
+        keyGenerator.init(keySIze, secureRandom);// 密钥长度
         SecretKey secretKey = keyGenerator.generateKey();
         return secretKey.getEncoded();
     }
 
-    private static Key buildKey(byte[] key) {
+    protected static Key buildKey(byte[] key) {
         return new SecretKeySpec(key, ALGORITHM);
     }
 
     public static byte[] encrypt(byte[] key, byte[] data) throws Exception {
-        return encrypt(key, data, MODE.ECB.name(), PADDING.PKCS5Padding.name());
+        return encrypt(key, data, MODE.CBC.name(), PADDING.PKCS5Padding.name(), DEFAULT_IV);
     }
 
     /**
@@ -126,14 +143,19 @@ public class AesUtils {
      * @return 加密后的数据
      * @throws Exception
      */
-    public static byte[] encrypt(byte[] key, byte[] data, String mode, String pad) throws Exception {
+    public static byte[] encrypt(byte[] key, byte[] data, String mode, String pad, byte[] iv_) throws Exception {
         Cipher cipher = Cipher.getInstance(String.format("%s/%s/%s", ALGORITHM, mode, pad));
-        cipher.init(Cipher.ENCRYPT_MODE, buildKey(key));
+        if (MODE.ECB.name().equals(mode)) {
+            cipher.init(Cipher.ENCRYPT_MODE, buildKey(key));
+        } else {
+            IvParameterSpec iv = new IvParameterSpec(iv_);
+            cipher.init(Cipher.ENCRYPT_MODE, buildKey(key), iv);
+        }
         return cipher.doFinal(data);
     }
 
     public static byte[] decrypt(byte[] key, byte[] data) throws Exception {
-        return decrypt(key, data, MODE.ECB.name(), PADDING.PKCS5Padding.name());
+        return decrypt(key, data, MODE.CBC.name(), PADDING.PKCS5Padding.name(), DEFAULT_IV);
     }
 
     /**
@@ -144,20 +166,197 @@ public class AesUtils {
      * @return 解密后的数据
      * @throws Exception
      */
-    public static byte[] decrypt(byte[] key, byte[] data, String mode, String pad) throws Exception {
+    public static byte[] decrypt(byte[] key, byte[] data, String mode, String pad, byte[] iv_) throws Exception {
         Cipher cipher = Cipher.getInstance(String.format("%s/%s/%s", ALGORITHM, mode, pad));
-        cipher.init(Cipher.DECRYPT_MODE, buildKey(key));
+        if (MODE.ECB.name().equals(mode)) {
+            cipher.init(Cipher.DECRYPT_MODE, buildKey(key));
+        } else {
+            IvParameterSpec iv = new IvParameterSpec(iv_);
+            cipher.init(Cipher.DECRYPT_MODE, buildKey(key), iv);
+        }
         return cipher.doFinal(data);
     }
 
-    public static void main(String[] args) throws Exception {
-        byte[] key = AesUtils.initKey(128);
-        System.out.println("密钥：" + Base64.encodeBase64String(key));
+    public static byte[] buildIv(byte[] iv_) {
+        if (iv_ == null) {
+            return DEFAULT_IV;
+        }
+        if (iv_.length < 16) {
+            return Arrays.copyOf(iv_, 16);
+        }
+        return Arrays.copyOfRange(iv_, 0, 16);
+    }
 
-        byte[] data = AesUtils.encrypt(key, ("高级加密标准（`Advanced Encryption Standard`：AES），又称Rijndael加密法，" +
-                "是美国联邦政府采用的一种区块加密标准").getBytes());
+
+}
+
+```
+
+```java
+package crypto.aes;
+
+import org.apache.commons.codec.binary.Base64;
+import org.junit.Test;
+
+/**
+ * @describe: 类描述信息
+ * @author: morningcat.zhang
+ * @date: 2024/4/8 22:19
+ */
+public class TestAesUtils {
+
+    @Test
+    public void testKey() throws Exception {
+        byte[] key1 = AesUtils.initKey(128);
+        System.out.println("128密钥：" + Base64.encodeBase64String(key1));
+        byte[] key2 = AesUtils.initKey(192);
+        System.out.println("192密钥：" + Base64.encodeBase64String(key2));
+        byte[] key3 = AesUtils.initKey(256);
+        System.out.println("256密钥：" + Base64.encodeBase64String(key3));
+    }
+
+    public static final String key128 = "DppKP2MHu75V09kVX9P7qg==";
+    public static final String key192 = "pMX5Zq8e6UiURseN2fBMvHWj4RduI2YI";
+    public static final String key256 = "Wb/ZsZjhuCw1oH0xrRfQ4DlvnEU3iTAC4jB8jFDaSLU=";
+
+    public static final String plainText = "世界人民大团结万岁";
+
+    public static final byte[] IV = "hello world".getBytes();
+
+    @Test
+    public void testECB_encrypt() throws Exception {
+        byte[] key = Base64.decodeBase64(key128);
+        String mode = AesUtils.MODE.ECB.name();
+        String pad = AesUtils.PADDING.PKCS5Padding.name();
+        System.out.println("密钥：" + key128);
+
+        byte[] data = AesUtils.encrypt(key, plainText.getBytes("UTF-8"), mode, pad, null);
         System.out.println("密文：" + Base64.encodeBase64String(data));
-        byte[] result = AesUtils.decrypt(key, data);
+
+    }
+
+    @Test
+    public void testECB_decrypt() throws Exception {
+        byte[] key = Base64.decodeBase64(key128);
+        String mode = AesUtils.MODE.ECB.name();
+        String pad = AesUtils.PADDING.PKCS5Padding.name();
+        System.out.println("密钥：" + key128);
+
+        String cipherText = "Cpd+1DNuqfIhYss+JJESVm3sbQli8KD+m5wBbT8Q/+4=";
+        byte[] data = Base64.decodeBase64(cipherText);
+        byte[] result = AesUtils.decrypt(key, data, mode, pad, null);
+        System.out.println("明文：" + new String(result));
+    }
+
+    @Test
+    public void testECB_encrypt2() throws Exception {
+        byte[] key = Base64.decodeBase64(key128);
+        String mode = AesUtils.MODE.ECB.name();
+        String pad = AesUtils.PADDING.ISO10126Padding.name();
+        System.out.println("密钥：" + key128);
+
+        byte[] data = AesUtils.encrypt(key, plainText.getBytes("UTF-8"), mode, pad, null);
+        System.out.println("密文：" + Base64.encodeBase64String(data));
+
+    }
+
+    @Test
+    public void testECB_decrypt2() throws Exception {
+        byte[] key = Base64.decodeBase64(key128);
+        String mode = AesUtils.MODE.ECB.name();
+        String pad = AesUtils.PADDING.ISO10126Padding.name();
+        System.out.println("密钥：" + key128);
+
+        String cipherText = "Cpd+1DNuqfIhYss+JJESVpyeiLEbtE1j7egrUM28YfM=";
+        byte[] data = Base64.decodeBase64(cipherText);
+        byte[] result = AesUtils.decrypt(key, data, mode, pad, null);
+        System.out.println("明文：" + new String(result));
+    }
+
+    @Test
+    public void testCBC_encrypt() throws Exception {
+        byte[] key = Base64.decodeBase64(key128);
+        String mode = AesUtils.MODE.CBC.name();
+        String pad = AesUtils.PADDING.PKCS5Padding.name();
+        byte[] iv = AesUtils.buildIv(IV);
+        System.out.println("密钥：" + key128);
+        System.out.println("iv:" + Base64.encodeBase64String(iv));
+
+        byte[] data = AesUtils.encrypt(key, plainText.getBytes("UTF-8"), mode, pad, iv);
+        System.out.println("密文：" + Base64.encodeBase64String(data));
+
+    }
+
+    @Test
+    public void testCBC_decrypt() throws Exception {
+        byte[] key = Base64.decodeBase64(key128);
+        String mode = AesUtils.MODE.CBC.name();
+        String pad = AesUtils.PADDING.PKCS5Padding.name();
+        byte[] iv = AesUtils.buildIv(IV);
+        System.out.println("密钥：" + key128);
+        System.out.println("iv:" + Base64.encodeBase64String(iv));
+
+        String cipherText = "qqKRgH2nogqE3kerhsgxFE/5DCEYXDYivlFb4SLhfLU=";
+        byte[] data = Base64.decodeBase64(cipherText);
+        byte[] result = AesUtils.decrypt(key, data, mode, pad, iv);
+        System.out.println("明文：" + new String(result));
+    }
+
+    @Test
+    public void testCTR_encrypt() throws Exception {
+        byte[] key = Base64.decodeBase64(key128);
+        String mode = AesUtils.MODE.CTR.name();
+        String pad = AesUtils.PADDING.NoPadding.name();
+        byte[] iv = AesUtils.buildIv(IV);
+        System.out.println("密钥：" + key128);
+        System.out.println("iv:" + Base64.encodeBase64String(iv));
+
+        byte[] data = AesUtils.encrypt(key, plainText.getBytes("UTF-8"), mode, pad, iv);
+        System.out.println("密文：" + Base64.encodeBase64String(data));
+
+    }
+
+    @Test
+    public void testCTR_decrypt() throws Exception {
+        byte[] key = Base64.decodeBase64(key128);
+        String mode = AesUtils.MODE.CTR.name();
+        String pad = AesUtils.PADDING.NoPadding.name();
+        byte[] iv = AesUtils.buildIv(IV);
+        System.out.println("密钥：" + key128);
+        System.out.println("iv:" + Base64.encodeBase64String(iv));
+
+        String cipherText = "h4cZP6C7G0Md1sUSD9u51WAs+p2S3fTtmYz/";
+        byte[] data = Base64.decodeBase64(cipherText);
+        byte[] result = AesUtils.decrypt(key, data, mode, pad, iv);
+        System.out.println("明文：" + new String(result));
+    }
+
+    @Test
+    public void testCFB_encrypt() throws Exception {
+        byte[] key = Base64.decodeBase64(key128);
+        String mode = AesUtils.MODE.CFB.name();
+        String pad = AesUtils.PADDING.PKCS5Padding.name();
+        byte[] iv = AesUtils.buildIv(IV);
+        System.out.println("密钥：" + key128);
+        System.out.println("iv:" + Base64.encodeBase64String(iv));
+
+        byte[] cipherBytes = AesUtils.encrypt(key, plainText.getBytes("UTF-8"), mode, pad, iv);
+        System.out.println("密文：" + Base64.encodeBase64String(cipherBytes));
+
+    }
+
+    @Test
+    public void testCFB_decrypt() throws Exception {
+        byte[] key = Base64.decodeBase64(key128);
+        String mode = AesUtils.MODE.CFB.name();
+        String pad = AesUtils.PADDING.PKCS5Padding.name();
+        byte[] iv = AesUtils.buildIv(IV);
+        System.out.println("密钥：" + key128);
+        System.out.println("iv:" + Base64.encodeBase64String(iv));
+
+        String cipherText = "h4cZP6C7G0Md1sUSD9u51TC/ATsFQAeB6Qs9Ad/rkqA=";
+        byte[] data = Base64.decodeBase64(cipherText);
+        byte[] result = AesUtils.decrypt(key, data, mode, pad, iv);
         System.out.println("明文：" + new String(result));
     }
 
@@ -165,7 +364,7 @@ public class AesUtils {
 
 ```
 
-## java bc 实现
+2. bc 实现
 
 ```java
 package crypto.aes;
@@ -173,11 +372,9 @@ package crypto.aes;
 import org.apache.commons.codec.binary.Base64;
 import org.bouncycastle.jce.provider.BouncyCastleProvider;
 
-import javax.crypto.KeyGenerator;
-import javax.crypto.SecretKey;
-import java.security.NoSuchAlgorithmException;
-import java.security.NoSuchProviderException;
-import java.security.Security;
+import javax.crypto.*;
+import javax.crypto.spec.IvParameterSpec;
+import java.security.*;
 
 /**
  * 对称加密 AES算法 bouncycastle实现
@@ -192,7 +389,7 @@ public class AesByBcUtils extends AesUtils {
 
     private static final String PROVIDER = "BC";
 
-    public static byte[] initKey() throws NoSuchAlgorithmException, NoSuchProviderException {
+    public static byte[] initKey() throws Exception {
         return initKey(128);
     }
 
@@ -201,24 +398,247 @@ public class AesByBcUtils extends AesUtils {
      *
      * @param keySIze 128 192 256
      */
-    public static byte[] initKey(int keySIze) throws NoSuchAlgorithmException, NoSuchProviderException {
+    public static byte[] initKey(int keySIze) throws Exception {
         KeyGenerator keyGenerator = KeyGenerator.getInstance(ALGORITHM, PROVIDER);
         keyGenerator.init(keySIze);// 密钥长度
         SecretKey secretKey = keyGenerator.generateKey();
         return secretKey.getEncoded();
     }
 
-    public static void main(String[] args) throws Exception {
-        byte[] key = AesByBcUtils.initKey(128);
-        System.out.println("密钥：" + Base64.encodeBase64String(key));
-
-        byte[] data = AesByBcUtils.encrypt(key, "你好 world".getBytes());
-        System.out.println("密文：" + Base64.encodeBase64String(data));
-        byte[] result = AesByBcUtils.decrypt(key, data);
-        System.out.println("明文：" + new String(result));
+    public static byte[] encrypt(byte[] key, byte[] data, String mode, String pad, byte[] iv_) throws Exception {
+        Cipher cipher = Cipher.getInstance(String.format("%s/%s/%s", ALGORITHM, mode, pad), PROVIDER);
+        if (MODE.ECB.name().equals(mode)) {
+            cipher.init(Cipher.ENCRYPT_MODE, buildKey(key));
+        } else {
+            IvParameterSpec iv = new IvParameterSpec(iv_);
+            cipher.init(Cipher.ENCRYPT_MODE, buildKey(key), iv);
+        }
+        return cipher.doFinal(data);
     }
+
+    public static byte[] decrypt(byte[] key, byte[] data, String mode, String pad, byte[] iv_) throws Exception {
+        Cipher cipher = Cipher.getInstance(String.format("%s/%s/%s", ALGORITHM, mode, pad), PROVIDER);
+        if (MODE.ECB.name().equals(mode)) {
+            cipher.init(Cipher.DECRYPT_MODE, buildKey(key));
+        } else {
+            IvParameterSpec iv = new IvParameterSpec(iv_);
+            cipher.init(Cipher.DECRYPT_MODE, buildKey(key), iv);
+        }
+        return cipher.doFinal(data);
+    }
+
 }
 
 ```
 
-[code](https://gitee.com/mengzhang6/java-read-sources-sample/tree/jdk8/src/main/java/crypto/aes)
+```java
+package crypto.aes;
+
+import org.apache.commons.codec.binary.Base64;
+import org.junit.Test;
+
+/**
+ * @describe: 类描述信息
+ * @author: morningcat.zhang
+ * @date: 2024/4/8 22:32
+ */
+public class TestAesByBcUtils {
+
+    @Test
+    public void testKey() throws Exception {
+        byte[] key1 = AesByBcUtils.initKey(128);
+        System.out.println("128密钥：" + Base64.encodeBase64String(key1));
+        byte[] key2 = AesByBcUtils.initKey(192);
+        System.out.println("192密钥：" + Base64.encodeBase64String(key2));
+        byte[] key3 = AesByBcUtils.initKey(256);
+        System.out.println("256密钥：" + Base64.encodeBase64String(key3));
+    }
+
+    public static final String key128 = "w/9fq9evB8/UQvcTMzNNiw==";
+    public static final String key192 = "6ojhHJL4ZJ4rMK7wIQWTn+JR44p3JTWP";
+    public static final String key256 = "KPsj/EjIigZavN6KtptIjtLV27/dLsE3LOIKBcomKMY=";
+
+    public static final String plainText = "世界人民大团结万岁";
+
+    public static final byte[] IV = "hello world".getBytes();
+
+    @Test
+    public void testCBC_encrypt() throws Exception {
+        byte[] key = Base64.decodeBase64(key128);
+        String mode = AesUtils.MODE.GCM.name();
+        String pad = AesUtils.PADDING.NoPadding.name();
+        byte[] iv = AesUtils.buildIv(IV);
+        System.out.println("密钥：" + key128);
+        System.out.println("iv:" + Base64.encodeBase64String(iv));
+
+        byte[] data = AesByBcUtils.encrypt(key, plainText.getBytes("UTF-8"), mode, pad, iv);
+        System.out.println("密文：" + Base64.encodeBase64String(data));
+
+    }
+
+    @Test
+    public void testCBC_decrypt() throws Exception {
+        byte[] key = Base64.decodeBase64(key128);
+        String mode = AesUtils.MODE.GCM.name();
+        String pad = AesUtils.PADDING.NoPadding.name();
+        byte[] iv = AesUtils.buildIv(IV);
+        System.out.println("密钥：" + key128);
+        System.out.println("iv:" + Base64.encodeBase64String(iv));
+
+        String cipherText = "uWepaOrfD+G41mDxFdEJh0+EZ12AnwQoLkcyqUT7RrM9THJ08DjA+Pv8lQ==";
+        byte[] data = Base64.decodeBase64(cipherText);
+        byte[] result = AesByBcUtils.decrypt(key, data, mode, pad, iv);
+        System.out.println("明文：" + new String(result));
+    }
+
+
+}
+
+```
+
+3. 依赖库
+
+```xml
+<dependency>
+    <groupId>commons-codec</groupId>
+    <artifactId>commons-codec</artifactId>
+    <version>1.15</version>
+</dependency>
+<dependency>
+    <groupId>org.bouncycastle</groupId>
+    <artifactId>bcprov-jdk15on</artifactId>
+    <version>1.70</version>
+</dependency>
+```
+
+[AES code](https://gitee.com/mengzhang6/java-read-sources-sample/tree/jdk8/src/main/java/crypto/aes)
+
+## python
+
+> pip3 install crypto
+
+```py
+import base64
+import os
+
+from Crypto.Cipher import AES
+from Crypto.Util.Padding import pad, unpad
+
+BS = AES.block_size
+key_ = "DppKP2MHu75V09kVX9P7qg=="
+iv_ = "aGVsbG8gd29ybGQAAAAAAA=="
+plaintext_ = "世界人民大团结万岁"
+
+
+class AES_Util(object):
+    @staticmethod
+    def init_key(key_size: int):
+        """
+
+        :param key_size: 128 192 256
+        :return:
+        """
+        key = os.urandom(key_size // 8)
+        return base64.b64encode(key)
+
+    @staticmethod
+    def init_iv():
+        key = os.urandom(128 // 8)
+        return base64.b64encode(key)
+
+    @staticmethod
+    def cbc_encrypt(plaintext: str, key_str: str):
+        """
+        AES-CBC 加密
+        key 必须是 16(AES-128)、24(AES-192) 或 32(AES-256) 字节的 AES 密钥；
+        初始化向量 iv 为随机的 16 位字符串 (必须是16位)，
+        解密需要用到这个相同的 iv，因此将它包含在密文的开头。
+        """
+        key = base64.b64decode(key_str)
+        iv = base64.b64decode(iv_)
+        cipher = AES.new(key, AES.MODE_CBC, iv)
+        ciphertext = cipher.encrypt(pad(plaintext.encode("utf-8"), BS))
+        return base64.b64encode(ciphertext)
+
+    @staticmethod
+    def cbc_decrypt(ciphertext: str, key_str: str):
+        """
+        AES-CBC 解密
+        密文的前 16 个字节为 iv
+        """
+        key = base64.b64decode(key_str)
+        iv = base64.b64decode(iv_)
+        cipher_bytes = base64.b64decode(ciphertext)
+        cipher = AES.new(key, AES.MODE_CBC, iv)
+        plain_bytes = cipher.decrypt(cipher_bytes)
+        return unpad(plain_bytes, BS).decode("utf-8")
+
+    @staticmethod
+    def gcm_encrypt(plaintext: str, key_str: str):
+        key = base64.b64decode(key_str)
+        iv = base64.b64decode(iv_)
+        cipher = AES.new(key, AES.MODE_GCM, iv)
+        ciphertext = cipher.encrypt(pad(plaintext.encode("utf-8"), BS))
+        return base64.b64encode(ciphertext)
+
+    @staticmethod
+    def gcm_decrypt(ciphertext: str, key_str: str):
+        key = base64.b64decode(key_str)
+        iv = base64.b64decode(iv_)
+        cipher_bytes = base64.b64decode(ciphertext)
+        cipher = AES.new(key, AES.MODE_GCM, iv)
+        plain_bytes = cipher.decrypt(cipher_bytes)
+        return unpad(plain_bytes, BS).decode("utf-8")
+
+
+def init_key_test():
+    print("128位密钥", AES_Util.init_key(128))
+
+
+def init_iv_test():
+    print("IV", AES_Util.init_iv())
+
+
+if __name__ == '__main__':
+    ciphertext = AES_Util.cbc_encrypt(plaintext_, key_)
+    print("CBC密文:", ciphertext)  # b'qqKRgH2nogqE3kerhsgxFE/5DCEYXDYivlFb4SLhfLU='
+    plaintext = AES_Util.cbc_decrypt(ciphertext, key_)
+    print("明文:", plaintext)
+
+    ciphertext = AES_Util.gcm_encrypt(plaintext_, key_)
+    print("GCM密文:", ciphertext)  # b'TCFfCjtg48lxXYJQ56MrHuh2gCrtM9rRWNYJmAoIjhQ='
+    plaintext = AES_Util.gcm_decrypt(ciphertext, key_)
+    print("明文:", plaintext)
+
+```
+
+## nodejs
+
+> npm install crypto
+
+```js
+const crypto = require('crypto');
+const algorithm = 'aes-128-cbc';
+const key = crypto.randomBytes(16);
+const iv = crypto.randomBytes(16);
+const plaintext = "世界人民大团结万岁"
+console.log("key=", Buffer.from(key).toString('base64'));
+console.log("iv=", Buffer.from(iv).toString('base64'));
+
+// 加密器
+const cipher = crypto.createCipheriv(algorithm, key, iv);
+ciphertext_base64 = cipher.update(plaintext, 'utf8', 'base64');
+ciphertext_base64 += cipher.final('base64');
+console.log("ciphertext=", ciphertext_base64);
+
+// 解密器
+const decipher = crypto.createDecipheriv(algorithm, key, iv);
+let text = decipher.update(ciphertext_base64, 'base64', 'utf8');
+text += decipher.final(utf8);
+console.log("plaintext=", text);
+
+```
+
+
+
+
