--- a/_posts/2024-04-19-[MySQL] 主从复制的配置笔记.md
+++ b/_posts/2024-04-19-[MySQL] 主从复制的配置笔记.md
@@ -10,13 +10,11 @@ tags:
     - MySQL
 ---
 
-
-
-
-
 - 保证mysql服务均开启bin_log
 - 保证mysql服务器之间,server_id不重复
 - 保证mysql服务器之间,ip互通
+
+当前MySQL版本: 8.0.23 (其他版本可查看相关版本的官方文档)
 
 ## 主库
 
