--- a/_posts/2024-04-18-[MySQL] 主从复制的配置笔记.md
+++ b/_posts/2024-04-18-[MySQL] 主从复制的配置笔记.md
@@ -26,7 +26,9 @@ tags:
 
 2. 是否开启bin_log
 
-mysql -uroot -p
+> mysql -uroot -p
+
+进入 mysql 客户端命令行交互界面
 
 > show variables like "%log_bin%";
 
@@ -45,6 +47,7 @@ mysql -uroot -p
 ```
 
 > show master status\G;
+
 ```
 *************************** 1. row ***************************
              File: binlog.000024
@@ -78,11 +81,11 @@ Executed_Gtid_Set:
 
 or
 
-> CREATE USER 'sync_user'@'%' IDENTIFIED BY 'hello@2024';
+> CREATE USER `'sync_user'@'%'` IDENTIFIED BY 'hello@2024';
 
 授权
 
-> grant replication slave on *.* to 'sync_user'@'%';
+> grant replication slave on `*.*` to `'sync_user'@'%'`;
 
 
 ## 从库
