--- a/_posts/2024-04-18-[MySQL] 主从复制的配置笔记.md
+++ b/_posts/2024-04-18-[MySQL] 主从复制的配置笔记.md
@@ -16,15 +16,15 @@ tags:
 
 当前MySQL版本: 8.0.23 (其他版本可查看相关版本的官方文档)
 
-## 主库
+## 1. 主库
 
-1. 查询ip
+#### 查询ip
 
 > ifconfig
 
 192.168.0.2
 
-2. 是否开启bin_log
+#### 是否开启bin_log
 
 > mysql -uroot -p
 
@@ -46,6 +46,8 @@ tags:
 6 rows in set (0.00 sec)
 ```
 
+#### 主库当前的binlog文件,以及Position
+
 > show master status\G;
 
 ```
@@ -58,7 +60,7 @@ Executed_Gtid_Set:
 1 row in set (0.00 sec)
 ```
 
-3. 检查server_id
+#### 检查server_id
 
 各个mysql服务器之间,server_id不能重复,否则复制时会报错;
 
@@ -75,33 +77,38 @@ Executed_Gtid_Set:
 
 > SET GLOBAL server_id = 101;
 
-4. 添加提供给从库使用的用户,用户从主库拉取数据
+#### 添加提供给从库使用的用户,用户从主库拉取数据
 
+
+```
+该用户只开放给 host为192.168.0.3的主机使用
 > CREATE USER 'sync_user'@'192.168.0.3' IDENTIFIED BY 'hello@2024';
+赋予从库权限
+> grant replication slave on `*.*` to 'sync_user'@'192.168.0.3';
 
-or
+开放给任何host使用
+> CREATE USER 'sync_user'@'%' IDENTIFIED BY 'hello@2024';
+> grant replication slave on `*.*` to 'sync_user'@'%';
+```
 
-> CREATE USER `'sync_user'@'%'` IDENTIFIED BY 'hello@2024';
-
-授权
-
-> grant replication slave on `*.*` to `'sync_user'@'%'`;
-
-
-## 从库
+## 2. 从库
 
 ip: 192.168.0.3  
 
 
 > mysql -uroot -p
 
-检查server_id,保证不与主库相同
+#### 检查server_id,保证不与主库相同
 
-执行同步命令，设置主服务器ip，同步账号密码，同步位置
+> SHOW GLOBAL VARIABLES LIKE 'server_id';
+
+#### 执行同步命令，设置主服务器ip，同步账号密码，同步位置
 
 > change master to master_host='192.168.0.2',master_port=3306,master_user='sync_user',master_password='hello@2024',master_log_file='binlog.000024',master_log_pos=156;
 
-开启同步功能
+注意点:master_log_file 和 master_log_pos 是主库上的binlog文件名和位置点
+
+#### 开启同步功能
 
 > start slave;
 
@@ -109,8 +116,7 @@ ip: 192.168.0.3
 
 > show slave status\G;
 
-
-停止同步
+#### 停止同步
 
 > STOP SLAVE;
 
