--- a/_posts/2024-04-18-[MySQL] 主从复制的配置笔记.md
+++ b/_posts/2024-04-18-[MySQL] 主从复制的配置笔记.md
@@ -116,6 +116,32 @@ ip: 192.168.0.3
 
 > show slave status\G;
 
+```
+*************************** 1. row ***************************
+Slave_IO_State: Waiting for master to send event
+Master_Host: 172.17.2.40
+Master_User: photorepl
+Master_Port: 4331
+Connect_Retry: 60
+Master_Log_File: mysql-bin.005502
+Read_Master_Log_Pos: 64401238
+Relay_Log_File: mysqld-relay-bin.015418
+Relay_Log_Pos: 13456757
+Relay_Master_Log_File: mysql-bin.005152
+Slave_IO_Running: Yes
+Slave_SQL_Running: Yes
+Replicate_Do_DB: 
+Replicate_Ignore_DB: mysql
+Replicate_Do_Table: 
+Replicate_Ignore_Table: 
+Replicate_Wild_Do_Table: photo.%
+Replicate_Wild_Ignore_Table: mysql.%
+Last_Errno: 0
+Last_Error: 
+```
+
+主要看Slave_IO_Running 和 Slave_SQL_Running 是否正常,为Yes则正常;若有异常可以查看Last_Error分析原因
+
 #### 停止同步
 
 > STOP SLAVE;
