--- a/_posts/2024-04-18-[MySQL] 主从复制的配置笔记.md
+++ b/_posts/2024-04-18-[MySQL] 主从复制的配置笔记.md
@@ -48,6 +48,8 @@ tags:
 
 #### 主库当前的binlog文件,以及Position
 
+查看服务器正在写入 binlog 文件名和位置
+
 > show master status\G;
 
 ```
@@ -104,7 +106,9 @@ ip: 192.168.0.3
 
 #### 执行同步命令，设置主服务器ip，同步账号密码，同步位置
 
-> change master to master_host='192.168.0.2',master_port=3306,master_user='sync_user',master_password='hello@2024',master_log_file='binlog.000024',master_log_pos=156;
+> change master to master_host='192.168.0.2',master_port=3306,\
+master_user='sync_user',master_password='hello@2024',\
+master_log_file='binlog.000024',master_log_pos=156;
 
 注意点:master_log_file 和 master_log_pos 是主库上的binlog文件名和位置点
 
