--- a/_posts/2024-04-18-[MySQL] 主从复制的配置笔记.md
+++ b/_posts/2024-04-18-[MySQL] 主从复制的配置笔记.md
@@ -158,4 +158,25 @@ Last_Error:
 - [https://dev.mysql.com/doc/refman/8.0/en/sql-replication-statements.html](https://dev.mysql.com/doc/refman/8.0/en/sql-replication-statements.html)
 - [https://dev.mysql.com/doc/refman/8.0/en/change-master-to.html](https://dev.mysql.com/doc/refman/8.0/en/change-master-to.html)
 
+## 扩展
+
+> SHOW VARIABLES LIKE 'binlog_format';
+
+```
++---------------+-------+
+| Variable_name | Value |
++---------------+-------+
+| binlog_format | ROW   |
++---------------+-------+
+1 row in set (0.00 sec)
+```
+
+ROW：不记录上下文信息（不记录 SQL ），只记录数据的变化，也就是说会记录数据变化的结果而不是 SQL 。
+
+> show binlog events;
+
+> \q 退出mysql客户端
+
+> mysqlbinlog -H -vvvvvv /usr/local/var/mysql/binlog.000025
+
 
