--- a/_posts/2024-05-06-[OS] os-17.md
+++ b/_posts/2024-05-06-[OS] os-17.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      操作系统课程2024
-subtitle:   17-C 标准库设计与实现
+title:      操作系统课程2024-17
+subtitle:   C 标准库设计与实现
 date:       2024-05-06
 author:     BY morningcat
 header-img: img/201904/UNADJUSTEDNONRAW_thumb_640.jpg
@@ -137,7 +137,7 @@ int main(int argc, char *argv[], char *envp[]) {
 
 ## System V Application Binary Interface
 
-https://jyywiki.cn/OS/manuals/sysv-abi.pdf
+[https://jyywiki.cn/OS/manuals/sysv-abi.pdf](/pdf/sysv-abi.pdf)
 
 给libc的实现者写的,如果想要实现自己的 libc 实现,则遵守这个标准的话,代码的运行效果将与其他系统的运行效果一致.
 
@@ -150,7 +150,7 @@ https://jyywiki.cn/OS/manuals/sysv-abi.pdf
 
 去哪里找 workload? 当然是 paper 了
 
-[Mimalloc: free list sharding in action (APLAS'19)](https://www.microsoft.com/en-us/research/uploads/prod/2019/06/mimalloc-tr-v1.pdf)
+[Mimalloc: free list sharding in action (APLAS'19)](https://www.microsoft.com/en-us/research/uploads/prod/2019/06/mimalloc-tr-v1.pdf) [or](/pdf/mimalloc-tr-v1.pdf)
 
 ## Thinking, Fast and Slow by Daniel Kahneman
 
