--- a/_posts/2024-05-06-[OS] os-17.md
+++ b/_posts/2024-05-06-[OS] os-17.md
@@ -71,7 +71,7 @@ glibc是GNU工具链的关键组件，用于和二进制工具和编译器一起
 - https://www.gnu.org/software/libc/
 - https://ftp.gnu.org/gnu/libc/
 
-![在这里插入图片描述](/img/os/libc.png)
+![在这里插入图片描述](/png/os/libc.png)
 
 
 ## musl libc
