--- a/_posts/2024-05-07-[OS] os-14.md
+++ b/_posts/2024-05-07-[OS] os-14.md
@@ -13,8 +13,102 @@ tags:
 - https://www.bilibili.com/video/BV1zE421u7p4
 - https://jyywiki.cn/OS/2024/lect14.md
 
+GPT
+
+
+- https://github.com/ggerganov/llama.cpp
+- https://github.com/karpathy/llm.c
+- https://jyywiki.cn/OS/2024/labs/M3.md
+
+AI
+
+- https://microsoft.github.io/AI-For-Beginners/
+- https://github.com/Microsoft/AI-For-Beginners
 
 ## 第一个进程
 
+## fork()
+
+> pstree
+
+```c
+#include <stdio.h>  
+#include <unistd.h>  
+  
+int main() {
+    pid_t x = fork();
+    pid_t y = fork();
+    printf("%d %d\n", x, y);
+    return 0;
+}
+```
+
+```c
+#include <stdio.h>  
+#include <stdlib.h>  
+#include <unistd.h>  
+#include <sys/wait.h>  
+  
+int main() {
+    printf("main PID is %d\n", getpid());  
+
+    pid_t pid; // 声明一个 pid_t 类型的变量，用于存储进程 ID  
+    pid = fork();
+  
+    if (pid < 0) { 
+        // fork() 失败  
+        fprintf(stderr, "Fork Failed");  
+        return 1;  
+    }  
+  
+    if (pid == 0) { 
+        // 子进程  
+        printf("I am the child process. My PID is %d and my parent's PID is %d.\n", getpid(), getppid());  
+    } else { 
+        // 父进程  
+        printf("I am the parent process. My PID is %d and my child's PID is %d.\n", getpid(), pid);  
+        // 等待子进程结束  
+        int status;  
+        waitpid(pid, &status, 0);
+    }  
+  
+    return 0;  
+}
+/*
+main PID is 28049
+I am the parent process. My PID is 28049 and my child's PID is 28055.
+I am the child process. My PID is 28055 and my parent's PID is 28049.
+*/
+```
+
+## fork bomb
+
+> :(){:|:&};:
+
+## 测验
+
+```c
+#include <stdio.h>  
+#include <unistd.h>  
+  
+int main() {
+    for (int i = 0; i < 2; i++) {
+        fork();
+        printf("Hello\n");
+    }
+}
+// ./a.out
+// ./a.out | cat
+// ./a.out | wc -l
+```
+
+## execve (重置状态机)
+
+```c
+int execve(const char *filename,
+           char * const argv[], char * const envp[]);
+```
+
+将当前进程重置成一个可执行文件描述状态机的初始状态
 
 
