--- a/_posts/2024-05-07-[OS] os-14.md
+++ b/_posts/2024-05-07-[OS] os-14.md
@@ -111,4 +111,33 @@ int execve(const char *filename,
 
 将当前进程重置成一个可执行文件描述状态机的初始状态
 
+```c
+int pid = fork();
+if (pid == -1) {
+    perror("fork"); goto fail;
+} else if (pid == 0) {
+    // Child
+    execve(...);
+    perror("execve"); goto fail;
+} else {
+    // Parent
+    ...
+}
+```
+
+## 实践
+
+```c
+#include <stdio.h>  
+#include <unistd.h>  
+  
+int main() {
+    char *const argv[] = {"/bin/bash", "-c", "env", NULL};
+    char *const envp[] = {"HELLO=WORLD", NULL};
+    execve(argv[0], argv, envp);
+    printf("hello\n");
+}
+```
+
+> strace ./a.out
 
