--- a/_posts/2024-05-06-[OS] os-17.md
+++ b/_posts/2024-05-06-[OS] os-17.md
@@ -10,19 +10,22 @@ tags:
     - OS
 ---
 
-- https://www.bilibili.com/video/BV1gZ421H7Mh
-- https://jyywiki.cn/OS/2024/lect17.md
+- [视频回放](https://www.bilibili.com/video/BV1gZ421H7Mh)
+- [课件资料](https://jyywiki.cn/OS/2024/lect17.md)
 
 
 ## 关于 PIPE
 
+查看手册 
+
 > man 7 pipe
 
+Broken pipe问题
 
-> python3 -c 'while True: print(1)' | head -n 1
+> `python3 -c 'while True: print(1)' | head -n 1`
 
 ```
-➜  ~ python3 -c 'while True: print(1)' | head -n 1
+> python3 -c 'while True: print(1)' | head -n 1
 1
 Traceback (most recent call last):
   File "<string>", line 1, in <module>
@@ -31,10 +34,10 @@ Exception ignored in: <_io.TextIOWrapper name='<stdout>' mode='w' encoding='utf-
 BrokenPipeError: [Errno 32] Broken pipe
 ```
 
-> (yes; echo $? > /dev/stderr) | head -n 1
+> `(yes; echo $? > /dev/stderr) | head -n 1`
 
 ```
-➜  ~ (yes; echo $? > /dev/stderr) | head -n 1
+> (yes; echo $? > /dev/stderr) | head -n 1
 y
 141
 ```
