--- a/_posts/2024-05-08-[OS] os-02.md
+++ b/_posts/2024-05-08-[OS] os-02.md
@@ -166,6 +166,17 @@ addr2:
 
 > gcc -g -S main.s > minimal.s
 
+```asm
+.globl _start
+_start:
+    movq $4, %rax; movq $1, %rdi; movq $addr1, %rsi; movq $addr2 - addr1, %rdx; syscall
+    movq $1, %rax; movq $1, %rdi; movq $0, %rsi; movq $0, %rdx; syscall
+
+addr1:
+    .ascii "\033[01;31mHello, world\033[0m\n"
+addr2:
+```
+
 > as minimal.s -o minimal.o
 
 > ld -o minimal minimal.o
@@ -186,3 +197,68 @@ aarch64, arm64 – ARM架构
 x86_64，x64，AMD64 – X86架构
 mips – MIPS架构
 ```
+
+## 另一种实现
+
+```asm
+#include <sys/syscall.h>
+ 
+.globl _start
+_start:
+  movq $SYS_write, %rax   // write(
+  movq $1,         %rdi   //   fd=1,
+  movq $st,        %rsi   //   buf=st,
+  movq $(ed - st), %rdx   //   count=ed-st
+  syscall                 // );
+ 
+  movq $SYS_exit,  %rax   // exit(
+  movq $1,         %rdi   //   status=1
+  syscall                 // );
+ 
+st:
+  .ascii "\033[01;31mHello, OS World\033[0m\n"
+ed:
+```
+
+> gcc -c minimal.s
+
+> ld minimal.o
+
+> objdump -d a.out | wc -l
+
+## macos下的实践
+
+hello.asm
+
+```asm
+section .data
+    hello db 'Hello, World!',10,0  ; 注意这里加上换行符和终止符
+
+section .text
+    global _start
+
+_start:
+    ; write(1, message, 14)
+    mov rax, 0x2000004         ; 系统调用号 4 表示 write
+    mov rdi, 1                 ; 文件描述符 1 表示标准输出
+    mov rsi, hello             ; 要打印的字符串
+    mov rdx, 14                ; 字符串的长度
+    syscall
+
+    ; exit(0)
+    mov rax, 0x2000001         ; 系统调用号 1 表示 exit
+    xor edi, edi               ; 返回值设为 0
+    syscall
+```
+
+> nasm -f macho64 hello.asm -o hello.o
+
+> ld -e _start -macos_version_min 14.1 hello.o -o hello
+
+ld: warning: alignment (1) of atom '_start' from 'hello.o' is too small and may result in unaligned pointers 
+ld: warning: no platform load command found in 'hello.o', assuming: macOS
+
+> ./hello
+
+
+
