--- a/_posts/2024-05-08-[OS] os-02.md
+++ b/_posts/2024-05-08-[OS] os-02.md
@@ -226,39 +226,63 @@ ed:
 
 > objdump -d a.out | wc -l
 
-## macos下的实践
+## WSL Ubuntu下的实践
 
-hello.asm
+hello.s
 
 ```asm
-section .data
-    hello db 'Hello, World!',10,0  ; 注意这里加上换行符和终止符
+.section .data
+msg: .ascii "Hello World\n"
 
-section .text
-    global _start
+.section .text
+.global _start
 
 _start:
-    ; write(1, message, 14)
-    mov rax, 0x2000004         ; 系统调用号 4 表示 write
-    mov rdi, 1                 ; 文件描述符 1 表示标准输出
-    mov rsi, hello             ; 要打印的字符串
-    mov rdx, 14                ; 字符串的长度
+    mov $1, %rax
+    mov $1, %rdi
+    mov $msg, %rsi
+    mov $12, %rdx
     syscall
 
-    ; exit(0)
-    mov rax, 0x2000001         ; 系统调用号 1 表示 exit
-    xor edi, edi               ; 返回值设为 0
+    mov $60, %rax
+    xor %rdi, %rdi
     syscall
 ```
 
-> nasm -f macho64 hello.asm -o hello.o
+> gcc -c hello.s
 
-> ld -e _start -macos_version_min 14.1 hello.o -o hello
-
-ld: warning: alignment (1) of atom '_start' from 'hello.o' is too small and may result in unaligned pointers 
-ld: warning: no platform load command found in 'hello.o', assuming: macOS
+> ld hello.o -o hello
 
 > ./hello
+
+8500+5100+3400-481.87-380-1113.82^_^202404-15024.31
+
+另一个实践成功的案例
+
+```asm
+.globl _start
+_start:
+  movq $1,         %rax   // write(
+  movq $1,         %rdi   //   fd=1,
+  movq $st,        %rsi   //   buf=st,
+  movq $(ed - st), %rdx   //   count=ed-st
+  syscall                 // );
+  movq $60,        %rax   // exit(
+  movq $1,         %rdi   //   status=1
+  syscall                 // );
+ 
+st:
+  .ascii "\033[01;31mHello World\033[0m\n"
+ed:
+```
+
+> gcc -c my.s
+
+> ld my.o -o my
+
+## 做减法：把 “不重要” 的部分屏蔽掉
+
+## system call trace (strace)
 
 
 
